[package]
name = "sv_raid_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysbot_rs = { git = "https://github.com/SteveCookTU/sysbot_rs.git", rev = "dc9fe68" }
clap = {version = "4.0.25", features = ['derive'] }